--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "main": "vite.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite --host"
+    "start": "vite --host",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
